[package]
name = "reprozip"
version = "0.1.0"
description = "Creates reproducible bundles from command-line executions"
authors = ["Remi Rampin <remirampin@gmail.com>"]
edition = "2018"

[dependencies]
bitflags = "1.0"
nix = "0.11"
slog = "2"
slog-stdlog = "3"

# main.rs
clap = "2"
slog-term = "2"
slog-async = "2"
